[project]
name = "openerz-api"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.23.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "flake8>=5.0.4",
    "pytest>=8.3.5",
    "testfixtures>=8.3.0",
]

