[project]
name = "openerz-api"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.0",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "coverage>=7.6.1",
    "flake8>=5.0.4",
    "pytest>=9.0.3",
    "testfixtures>=8.3.0",
]

